Changed build system to gradle. Also some reformatting